[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["josephlee3454 <joseph.lee3454@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
pandas = "^1.0.5"
keras = "^2.4.3"
sklearn = "^0.0"
matplotlib = "^3.3.0"
jupyterlab = "^2.2.0"
tensorflow = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
